fix: 콘텐츠 영역이 overflowe되면 안보이는 현상 수정

--- a/src/layout/MainLayout.module.css
+++ b/src/layout/MainLayout.module.css
@@ -1,5 +1,6 @@
 .main {
   flex: 1;
   height: calc(100% - 80px);
+  margin-bottom: 80px;
   overflow-y: scroll;
 }
